# picsellia-processings

./: .gitignore  .pre-commit-config.yaml  build_images.sh
abstract_processor/: processor.py  utils.py
dataset/: Dockerfile  Dockerfile.tensorflow  Dockerfile.yolov8  build_images.sh
dataset/VIT/: launch_processing.py  main.py  utils.py
dataset/data_augmentations/: pyproject.toml  requirements.txt
dataset/data_augmentations/imgaug_rotation/: launch_processing.py  main.py  requirements.txt
dataset/data_augmentations/imgaug_rotation/utils/: dict_updates_imgaug.py  simplify_main.py
dataset/data_augmentations/mask_image_augmentation/: launch_processing.py  main.py
dataset/data_augmentations/rotation/: launch_processing.py  main.py
dataset/data_augmentations/utils/: dict_updates.py  mask_augmentation.py
dataset/image_extractor/: main.py  pyproject.toml
dataset/image_extractor/utils/: PicselliaImageExtractor.py
dataset/sanity_checks/: main.py  requirements.txt  utils.py
dataset/tf/: Dockerfile  launch_processing.py  main.py
dataset/torch/: launch_processing.py  main.py
dataset/yolox/: launch_processing.py  main.py  pyproject.toml  requirements.txt  tqdm_handler.py
docker/: Dockerfile.extractor  Dockerfile.imgaug_rotation  Dockerfile.mask  Dockerfile.rotate  Dockerfile.sanity  Dockerfile.tensorflow  Dockerfile.vit  Dockerfile.vlm_tagging  Dockerfile.yolov8  Dockerfile.yolox
evaluator/: abstract_evaluator.py  framework_formatter.py  type_formatter.py  yolo_evaluator.py
experiment/: build_images.sh
utils/: annotator.py  formatters.py
(+19 files in other folders)
