[tool.poetry]
name = "datat-augmentations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "datat_augmentations"}]

[tool.poetry.dependencies]
python = "^3.10"
picsellia = "6.6.0"
albumentations = "^1.3.0"
pycocotools = "^2.0.6"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
